--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.4.7"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "angular-ui-router": "~0.2.15"
   },
   "appPath": "app",
   "moduleName": "apiYeomanApp",
