--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-coverage": "^0.5.2",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
     "karma-sinon": "^1.0.4",
     "karma-sinon-chai": "^1.1.0",
     "mocha": "^2.3.3",
